//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  mobileNumber String
  password String [not null]
  active Boolean [not null, default: false]
  name String
  bookings Booking [not null]
  paymentReceived Boolean [default: false]
  role Role [not null, default: 'USER']
  Documents Documents [not null]
}

Table Trip {
  id Int [pk, increment]
  TripId String
  TripTittle String
  TripDuration String
  TripPhoto String
  TripMainImage String
  TripTags String[] [not null]
  TripPickAndDrop String
  TripDescription Json[] [not null]
  Itineary Json[] [not null]
  Dates Json[] [not null]
  Inclusion Json[] [not null]
  Exclusion Json[] [not null]
  bookings Booking [not null]
}

Table Booking {
  id Int [pk, increment]
  user User [not null]
  userId String [not null]
  trip Trip [not null]
  tripId Int [not null]
  tripDate String [not null]
  createdAt DateTime [default: `now()`, not null]
  passengers Int
}

Table Documents {
  id Int [pk, increment]
  user User
  userId String
  documentTitle String
  documentUrl String
  status String [default: 'PENDING']
}

Table EmailSubscription {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [not null]
}

Table QueryDestination {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String
  emailId String
  mobileNumber String
  destination String
}

Enum Role {
  ADMIN
  USER
}

Enum STATUS {
  APPROVED
  PENDING
  REJECTED
}

Ref: Booking.userId > User.id

Ref: Booking.tripId > Trip.id

Ref: Documents.userId > User.id